@@ -18,17 +18,16 @@
 package org.apache.ignite.internal.metastorage;
 
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import org.apache.ignite.internal.metastorage.watch.WatchAggregator;
-import org.apache.ignite.metastorage.common.Entry;
-import org.apache.ignite.metastorage.common.Key;
-import org.apache.ignite.metastorage.common.WatchEvent;
-import org.apache.ignite.metastorage.common.WatchListener;
+import org.apache.ignite.lang.ByteArray;
+import org.apache.ignite.metastorage.client.Entry;
+import org.apache.ignite.metastorage.client.EntryEvent;
+import org.apache.ignite.metastorage.client.WatchEvent;
+import org.apache.ignite.metastorage.client.WatchListener;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.Test;
-
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
@@ -42,19 +41,27 @@ public class WatchAggregatorTest {
         var watchAggregator = new WatchAggregator();
         var lsnr1 = mock(WatchListener.class);
         var lsnr2 = mock(WatchListener.class);
-        watchAggregator.add(new Key("1"), lsnr1);
-        watchAggregator.add(new Key("2"), lsnr2);
+        watchAggregator.add(new ByteArray("1"), lsnr1);
+        watchAggregator.add(new ByteArray("2"), lsnr2);
 
-        var watchEvent1 = new WatchEvent(
-            entry("1", "value1", 1),
-            entry("1", "value1n", 1));
-        var watchEvent2 = new WatchEvent(
-            entry("2", "value2", 1),
-            entry("2", "value2n", 1));
-        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(Arrays.asList(watchEvent1, watchEvent2));
+        var entryEvt1 = new EntryEvent(
+                entry("1", "value1", 1),
+                entry("1", "value1n", 1)
+        );
 
-        verify(lsnr1).onUpdate(Collections.singletonList(watchEvent1));
-        verify(lsnr2).onUpdate(Collections.singletonList(watchEvent2));
+        var watchEvent1 = new WatchEvent(entryEvt1);
+
+        var entryEvt2 = new EntryEvent(
+                entry("2", "value2", 1),
+                entry("2", "value2n", 1)
+        );
+
+        var watchEvent2 = new WatchEvent(entryEvt2);
+
+        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(new WatchEvent(List.of(entryEvt1, entryEvt2)));
+
+        verify(lsnr1).onUpdate(watchEvent1);
+        verify(lsnr2).onUpdate(watchEvent2);
     }
 
     @Test
@@ -64,22 +71,26 @@ public class WatchAggregatorTest {
         when(lsnr1.onUpdate(any())).thenReturn(true);
         var lsnr2 = mock(WatchListener.class);
         when(lsnr2.onUpdate(any())).thenReturn(true);
-        var id1 = watchAggregator.add(new Key("1"), lsnr1);
-        var id2 = watchAggregator.add(new Key("2"), lsnr2);
+        var id1 = watchAggregator.add(new ByteArray("1"), lsnr1);
+        var id2 = watchAggregator.add(new ByteArray("2"), lsnr2);
 
-        var watchEvent1 = new WatchEvent(
-            entry("1", "value1", 1),
-            entry("1", "value1n", 1));
-        var watchEvent2 = new WatchEvent(
-            entry("2", "value2", 1),
-            entry("2", "value2n", 1));
-        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(Arrays.asList(watchEvent1, watchEvent2));
+        var entryEvt1 = new EntryEvent(
+                entry("1", "value1", 1),
+                entry("1", "value1n", 1)
+        );
+
+        var entryEvt2 = new EntryEvent(
+                entry("2", "value2", 1),
+                entry("2", "value2n", 1)
+        );
+
+        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(new WatchEvent(List.of(entryEvt1, entryEvt2)));
 
         verify(lsnr1, times(1)).onUpdate(any());
         verify(lsnr2, times(1)).onUpdate(any());
 
         watchAggregator.cancel(id1);
-        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(Arrays.asList(watchEvent1, watchEvent2));
+        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(new WatchEvent(List.of(entryEvt1, entryEvt2)));
 
         verify(lsnr1, times(1)).onUpdate(any());
         verify(lsnr2, times(2)).onUpdate(any());
@@ -92,21 +103,25 @@ public class WatchAggregatorTest {
         when(lsnr1.onUpdate(any())).thenReturn(false);
         var lsnr2 = mock(WatchListener.class);
         when(lsnr2.onUpdate(any())).thenReturn(true);
-        var id1 = watchAggregator.add(new Key("1"), lsnr1);
-        var id2 = watchAggregator.add(new Key("2"), lsnr2);
+        var id1 = watchAggregator.add(new ByteArray("1"), lsnr1);
+        var id2 = watchAggregator.add(new ByteArray("2"), lsnr2);
 
-        var watchEvent1 = new WatchEvent(
+        var entryEvt1 = new EntryEvent(
             entry("1", "value1", 1),
-            entry("1", "value1n", 1));
-        var watchEvent2 = new WatchEvent(
+            entry("1", "value1n", 1)
+        );
+
+        var entryEvt2 = new EntryEvent(
             entry("2", "value2", 1),
-            entry("2", "value2n", 1));
-        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(Arrays.asList(watchEvent1, watchEvent2));
+            entry("2", "value2n", 1)
+        );
+
+        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(new WatchEvent(List.of(entryEvt1, entryEvt2)));
 
         verify(lsnr1, times(1)).onUpdate(any());
         verify(lsnr2, times(1)).onUpdate(any());
 
-        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(Arrays.asList(watchEvent1, watchEvent2));
+        watchAggregator.watch(1, (v1, v2) -> {}).get().listener().onUpdate(new WatchEvent(List.of(entryEvt1, entryEvt2)));
 
         verify(lsnr1, times(1)).onUpdate(any());
         verify(lsnr2, times(2)).onUpdate(any());
@@ -115,8 +130,8 @@ public class WatchAggregatorTest {
 
     private Entry entry(String key, String value, long revision) {
         return new Entry() {
-            @Override public @NotNull Key key() {
-                return new Key(key);
+            @Override public @NotNull ByteArray key() {
+                return new ByteArray(key);
             }
 
             @Override public @Nullable byte[] value() {
